Fix spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -31,6 +31,10 @@ table {
     }
 }
 
+.table {
+  margin-bottom: 0rem;
+}
+
 a, table.table a {
   color: var(--global-theme-color);
   &:hover {
@@ -65,7 +69,7 @@ blockquote {
 
 .caption {
   font-size: 0.875rem;
-  margin-top: 0.75rem;
+  margin-top: 0.5rem;
   margin-bottom: 1.5rem;
   text-align: center;
 }
@@ -552,6 +556,9 @@ footer.sticky-bottom {
       div.abstract.hidden.open {
         border-color: var(--global-text-color);
       }
+    }
+    .row {
+      margin-bottom: 0.5rem;
     }
   }
 }
